--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   & .nav{
@@ -21,6 +22,7 @@
     }
 
     &__item{
+      cursor: pointer;
 
       padding: 13px 26px;
 
