last update with fix click item

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -54,6 +54,11 @@
     align-items: center;
     justify-content: center;
     align-self: flex-start;
+    text-decoration: none;
+  }
+
+  & a{
+    text-decoration: none;
   }
 
   & .bucket{
