--- a/src/components/Phone/Phone.module.scss
+++ b/src/components/Phone/Phone.module.scss
@@ -29,6 +29,10 @@
     cursor: pointer;
   }
 
+  &__like_active{
+    background-color: #FF0000;
+  }
+
   &__type {
     font-family: "Inter";
     font-style: normal;
